--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "tsc && vite build",
     "dev": "npm start",
     "start": "ladle serve",
-    "build-docs": "ladle build --viteConfig vite-ladle.config.ts -o docs && touch ./docs/.nojekyll",
+    "build-docs": "ladle build --viteConfig vite-ladle.config.ts && touch ./docs/.nojekyll",
     "lint": "eslint . --ext .ts,.tsx"
   },
   "peerDependencies": {
